--- a/pages/blog/2017/04/26/habitat-source-verification.mdx
+++ b/pages/blog/2017/04/26/habitat-source-verification.mdx
@@ -4,7 +4,7 @@ export const meta = {
     title: "Source Verification Using GnuPG In Habitat",
     description: 'Getting started with the Next framework',
     date: '2017-04-28',
-    image: 'cover-1.jpg',
+    image: 'mask.jpg',
     author: {
         name: 'Paul Adams',
         avatar: 'paul.png'
