--- a/pages/blog/2017/05/22/chefconf-day-minus-1.mdx
+++ b/pages/blog/2017/05/22/chefconf-day-minus-1.mdx
@@ -5,7 +5,7 @@ export const meta = {
     category: 'open source',
     description: 'Getting started with the Next framework',
     date: '2017-05-22',
-    image: 'cover-1.jpg',
+    image: 'chefconfheader.jpg',
     author: {
         name: 'Paul Adams',
         avatar: 'paul.png'
