--- a/pages/blog/2017/04/15/habitat-cratedb.mdx
+++ b/pages/blog/2017/04/15/habitat-cratedb.mdx
@@ -4,7 +4,7 @@ export const meta = {
     title: "A New Habitat For Crate",
     description: 'Getting started with the Next framework',
     date: '2017-04-15',
-    image: 'cover-1.jpg',
+    image: 'field.jpg',
     author: {
         name: 'Paul Adams',
         avatar: 'paul.png'
