--- a/pages/blog/2017/05/28/habitat-R.mdx
+++ b/pages/blog/2017/05/28/habitat-R.mdx
@@ -5,7 +5,7 @@ export const meta = {
     category: 'open source',
     description: 'Getting started with the Next framework',
     date: '2017-05-28',
-    image: 'cover-1.jpg',
+    image: 'stats.jpg',
     author: {
         name: 'Paul Adams',
         avatar: 'paul.png'
