--- a/pages/blog/2017/06/04/habitat-community.mdx
+++ b/pages/blog/2017/06/04/habitat-community.mdx
@@ -5,7 +5,7 @@ export const meta = {
     category: 'open source',
     description: 'Getting started with the Next framework',
     date: '2017-06-04',
-    image: 'cover-1.jpg',
+    image: 'blobs.png',
     author: {
         name: 'Paul Adams',
         avatar: 'jj.jpeg'
