--- a/pages/blog/2017/07/10/autotools-and-habitat.mdx
+++ b/pages/blog/2017/07/10/autotools-and-habitat.mdx
@@ -5,7 +5,7 @@ export const meta = {
     category: 'open source',
     description: 'Getting started with the Next framework',
     date: '2017-07-10',
-    image: 'cover-1.jpg',
+    image: 'tools.jpg',
     author: {
         name: 'Paul Adams',
         avatar: 'paul.png'
