--- a/pages/blog/2017/07/21/retired-from-kde.mdx
+++ b/pages/blog/2017/07/21/retired-from-kde.mdx
@@ -5,7 +5,7 @@ export const meta = {
     category: 'open source',
     description: 'Getting started with the Next framework',
     date: '2017-07-21',
-    image: 'cover-1.jpg',
+    image: 'kde-committers.png',
     author: {
         name: 'Paul Adams',
         avatar: 'paul.png'
