--- a/pages/blog/2017/08/04/satisficery-engineering.mdx
+++ b/pages/blog/2017/08/04/satisficery-engineering.mdx
@@ -5,7 +5,7 @@ export const meta = {
     category: 'culture',
     description: 'Getting started with the Next framework',
     date: '2017-08-04',
-    image: 'cover-1.jpg',
+    image: 'content.jpg',
     author: {
         name: 'Paul Adams',
         avatar: 'paul.png'
