--- a/pages/blog/2018/01/22/habitat-php.mdx
+++ b/pages/blog/2018/01/22/habitat-php.mdx
@@ -5,7 +5,7 @@ export const meta = {
     category: 'open source',
     description: 'Getting started with the Next framework',
     date: '2018-01-22',
-    image: 'cover-1.jpg',
+    image: 'core.jpg',
     author: {
         name: 'Paul Adams',
         avatar: 'paul.png'
