--- a/pages/blog/2018/01/29/finding-strength.mdx
+++ b/pages/blog/2018/01/29/finding-strength.mdx
@@ -5,7 +5,7 @@ export const meta = {
     category: 'culture',
     description: 'Getting started with the Next framework',
     date: '2018-01-29',
-    image: 'cover-1.jpg',
+    image: 'strength.jpg',
     author: {
         name: 'Paul Adams',
         avatar: 'paul.png'
