--- a/pages/blog/2017/06/04/habitat-community.mdx
+++ b/pages/blog/2017/06/04/habitat-community.mdx
@@ -8,7 +8,8 @@ export const meta = {
     image: 'blobs.png',
     author: {
         name: 'Paul Adams',
-        avatar: 'jj.jpeg'
+        avatar: 'jj.jpeg',
+        twitter: '@therealpadams'
     },
     readTime: 2
 }
