--- a/pages/blog/2018/01/29/finding-strength.mdx
+++ b/pages/blog/2018/01/29/finding-strength.mdx
@@ -8,7 +8,8 @@ export const meta = {
     image: 'strength.jpg',
     author: {
         name: 'Paul Adams',
-        avatar: 'paul.png'
+        avatar: 'paul.png',
+        twitter: '@therealpadams'
     },
     readTime: 2
 }
