--- a/pages/blog/2017/01/09/quote-of-the-year.mdx
+++ b/pages/blog/2017/01/09/quote-of-the-year.mdx
@@ -7,7 +7,8 @@ export const meta = {
     image: 'lesson.jpg',
     author: {
         name: 'Paul Adams',
-        avatar: 'paul.png'
+        avatar: 'paul.png',
+        twitter: '@therealpadams'
     }
 }
 
