--- a/pages/blog/2017/02/04/fosdem-2017.mdx
+++ b/pages/blog/2017/02/04/fosdem-2017.mdx
@@ -7,7 +7,8 @@ export const meta = {
     image: 'fosdem.jpg',
     author: {
         name: 'Paul Adams',
-        avatar: 'paul.png'
+        avatar: 'paul.png',
+        twitter: '@therealpadams'
     }
 }
 
