--- a/pages/blog/2017/04/01/habitat-intro.mdx
+++ b/pages/blog/2017/04/01/habitat-intro.mdx
@@ -7,7 +7,8 @@ export const meta = {
     image: 'habitat.jpg',
     author: {
         name: 'Paul Adams',
-        avatar: 'paul.png'
+        avatar: 'paul.png',
+        twitter: '@therealpadams'
     }
 }
 
