--- a/pages/blog/2017/04/26/habitat-source-verification.mdx
+++ b/pages/blog/2017/04/26/habitat-source-verification.mdx
@@ -7,7 +7,8 @@ export const meta = {
     image: 'mask.jpg',
     author: {
         name: 'Paul Adams',
-        avatar: 'paul.png'
+        avatar: 'paul.png',
+        twitter: '@therealpadams'
     }
 }
 
