--- a/pages/blog/2017/05/28/habitat-R.mdx
+++ b/pages/blog/2017/05/28/habitat-R.mdx
@@ -8,7 +8,8 @@ export const meta = {
     image: 'stats.jpg',
     author: {
         name: 'Paul Adams',
-        avatar: 'paul.png'
+        avatar: 'paul.png',
+        twitter: '@therealpadams'
     },
     readTime: 2
 }
