--- a/pages/blog/2017/07/21/retired-from-kde.mdx
+++ b/pages/blog/2017/07/21/retired-from-kde.mdx
@@ -8,7 +8,8 @@ export const meta = {
     image: 'kde-committers.png',
     author: {
         name: 'Paul Adams',
-        avatar: 'paul.png'
+        avatar: 'paul.png',
+        twitter: '@therealpadams'
     },
     readTime: 2
 }
