--- a/pages/blog/2017/04/15/habitat-cratedb.mdx
+++ b/pages/blog/2017/04/15/habitat-cratedb.mdx
@@ -1,5 +1,7 @@
 import Page from 'components/Page'
 
+import 'prismjs/themes/prism-okaidia.css'
+
 export const meta = {
     title: "A New Habitat For Crate",
     description: 'Getting started with the Next framework',
@@ -160,8 +162,6 @@ No rocket science here:
 - Build
 - Export
 - Run
-
-{% Asciinema file="terminal.json" %}
 
 The resulting Docker image is kinda large at ~420mb. That's roughly
 twice the size of CrateDB's official image on [Docker
