--- a/pages/blog/2017/04/26/habitat-source-verification.mdx
+++ b/pages/blog/2017/04/26/habitat-source-verification.mdx
@@ -1,5 +1,7 @@
 import Page from 'components/Page'
 
+import 'prismjs/themes/prism-okaidia.css'
+
 export const meta = {
     title: "Source Verification Using GnuPG In Habitat",
     description: 'Getting started with the Next framework',
