--- a/pages/blog/2017/05/11/habitat-sup-22.mdx
+++ b/pages/blog/2017/05/11/habitat-sup-22.mdx
@@ -1,5 +1,7 @@
 import Page from 'components/Page'
 
+import 'prismjs/themes/prism-okaidia.css'
+
 export const meta = {
     title: "Idiot's Guide To The Supervisor In Habitat 0.22",
     category: 'open source',
