--- a/pages/blog/2017/05/28/habitat-R.mdx
+++ b/pages/blog/2017/05/28/habitat-R.mdx
@@ -1,5 +1,7 @@
 import Page from 'components/Page'
 
+import 'prismjs/themes/prism-okaidia.css'
+
 export const meta = {
     title: 'Habitat, R and the Art of the Pull Request',
     category: 'open source',
