--- a/pages/blog/2017/06/23/habitat-R-redux.mdx
+++ b/pages/blog/2017/06/23/habitat-R-redux.mdx
@@ -1,5 +1,7 @@
 import Page from 'components/Page'
 
+import 'prismjs/themes/prism-okaidia.css'
+
 export const meta = {
     title: 'The core/R Habitat Package',
     category: 'open source',
