--- a/pages/blog/2017/07/10/autotools-and-habitat.mdx
+++ b/pages/blog/2017/07/10/autotools-and-habitat.mdx
@@ -1,5 +1,7 @@
 import Page from 'components/Page'
 
+import 'prismjs/themes/prism-okaidia.css'
+
 export const meta = {
     title: 'Autotools in the Habitat Context',
     category: 'open source',
