--- a/pages/blog/2018/01/22/habitat-php.mdx
+++ b/pages/blog/2018/01/22/habitat-php.mdx
@@ -1,5 +1,7 @@
 import Page from 'components/Page'
 
+import 'prismjs/themes/prism-okaidia.css'
+
 export const meta = {
     title: 'Habitat Core/PHP, The Story Of The PR',
     category: 'open source',
