Better layour for posts/pages. Include Insta draft.

--- a/pages/blog/2016/03/19/rush-hour-berlin.mdx
+++ b/pages/blog/2016/03/19/rush-hour-berlin.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "Rush Hour Berlin",
@@ -12,7 +12,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 Berliners love to complain about the public transport; it's in their
 blood. Within the city there are two major players: the BVG, who
