--- a/pages/blog/2016/12/19/crate-ga.mdx
+++ b/pages/blog/2016/12/19/crate-ga.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "CrateDB v.1",
@@ -12,7 +12,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 Last week CrateDB v1.0.1 was released as Generally Available. This is
 the culmination of years of work, thousands of commits and in excess
