--- a/pages/blog/2016/12/20/evolution.mdx
+++ b/pages/blog/2016/12/20/evolution.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "Lehman's Laws of Software Evolution",
@@ -12,7 +12,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 Some of my favourite "things" in the theory of engineering management
 are [Lehman's Laws of Software
