--- a/pages/blog/2016/12/21/einheit.mdx
+++ b/pages/blog/2016/12/21/einheit.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "Einheit",
@@ -12,7 +12,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 I'm flying home for Chrismas. Literally, I am sat in a plane right
 now. Being able to blog offline is one the side benefits of [my switch
