--- a/pages/blog/2016/12/23/lehmanns-law-1.mdx
+++ b/pages/blog/2016/12/23/lehmanns-law-1.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "Lehman's First Law",
@@ -12,7 +12,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 This is the second of my posts on the topics of Lehman's Laws of
 Software Evolution and how they relate to agility. I'll probably only
