--- a/pages/blog/2016/12/26/docker-2016.mdx
+++ b/pages/blog/2016/12/26/docker-2016.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "Docker's 2016",
@@ -12,7 +12,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 At this time of year I normally start making some basic analysis of
 the ins-and-outs of some [KDE](http://www.kde.org) projects. This
