--- a/pages/blog/2016/12/29/starship.mdx
+++ b/pages/blog/2016/12/29/starship.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 import Youtube from 'components/Youtube'
 
 import 'prismjs/themes/prism-okaidia.css'
@@ -15,7 +15,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 Recently I have become addicted to the [coding
 challenges](https://www.youtube.com/playlist?list=PLRqwX-V7Uu6ZiZxtDDRCi6uhfTH4FilpH)
