--- a/pages/blog/2017/01/09/quote-of-the-year.mdx
+++ b/pages/blog/2017/01/09/quote-of-the-year.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "Quote Of The Year",
@@ -12,7 +12,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 I've been living in Berlin for almost 3 years now. I am *very* overdue
 to really start learning German. It's not that I don't speak *any*
