--- a/pages/blog/2017/02/04/fosdem-2017.mdx
+++ b/pages/blog/2017/02/04/fosdem-2017.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "6 Simple Rules (The FOSDEM Survival Guide)",
@@ -12,7 +12,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 [FOSDEM](http://www.fosdem.org) is my only must-do event each year;
 I've been attending for 12 or 13 years now. Over time my motivation
