--- a/pages/blog/2017/04/01/habitat-intro.mdx
+++ b/pages/blog/2017/04/01/habitat-intro.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 import Youtube from 'components/Youtube'
 
 export const meta = {
@@ -13,7 +13,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 Earlier this week I attended the [Berlin Chef
 Meetup](https://www.meetup.com/berlin-chefs/events/238210151/). I'm
