--- a/pages/blog/2017/04/26/habitat-source-verification.mdx
+++ b/pages/blog/2017/04/26/habitat-source-verification.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 import 'prismjs/themes/prism-okaidia.css'
 
@@ -14,7 +14,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 My adventures into [Habitat](https://habitat.sh) continue. This time,
 I am writing a little about how Habitat handles source verification
