--- a/pages/blog/2017/05/11/habitat-sup-22.mdx
+++ b/pages/blog/2017/05/11/habitat-sup-22.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 import 'prismjs/themes/prism-okaidia.css'
 
@@ -16,7 +16,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 [Habitat
 0.22.x](https://forums.habitat.sh/t/habitat-0-22-0-released/326) is
