--- a/pages/blog/2017/05/22/chefconf-day-minus-1.mdx
+++ b/pages/blog/2017/05/22/chefconf-day-minus-1.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: 'ChefConf 2017 - Day -1',
@@ -14,7 +14,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 After a fairly last-minute decision to attend, I am currently in
 Austin for [ChefConf 2017](https://chefconf.chef.io/2017). As you
