--- a/pages/blog/2017/06/04/habitat-community.mdx
+++ b/pages/blog/2017/06/04/habitat-community.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: 'Visualising The Habitat Community',
@@ -14,7 +14,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 It's been a while since I did a Git [repo
 visualisation](/2016/12/docker-2016/), which means I am definitely
