--- a/pages/blog/2017/07/10/autotools-and-habitat.mdx
+++ b/pages/blog/2017/07/10/autotools-and-habitat.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 import 'prismjs/themes/prism-okaidia.css'
 
@@ -16,7 +16,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 Well... it's 2017 and Autotools has survived the test of time. In this
 blog post I present a _very_ brief introduction to Autotools before
