--- a/pages/blog/2017/07/21/retired-from-kde.mdx
+++ b/pages/blog/2017/07/21/retired-from-kde.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: 'Retired From KDE',
@@ -14,7 +14,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 Many of you reading this are probably already aware, long-time
 maintainer of glibc Roland McGrath has recently
