--- a/pages/blog/2017/08/04/satisficery-engineering.mdx
+++ b/pages/blog/2017/08/04/satisficery-engineering.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: 'Satisficery Engineering',
@@ -14,7 +14,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 There is a particular dark art within engineering leadership. Nobody
 ever really teaches it; at least nobody ever taught it to me. And even
