--- a/pages/blog/2018/01/22/habitat-php.mdx
+++ b/pages/blog/2018/01/22/habitat-php.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 import 'prismjs/themes/prism-okaidia.css'
 
@@ -16,7 +16,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 Today I finally got around to submitting [my first PR for
 2018](https://github.com/habitat-sh/core-plans/pull/1146). It's part
