--- a/pages/blog/2018/01/29/finding-strength.mdx
+++ b/pages/blog/2018/01/29/finding-strength.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: 'Evaluating My Strengths',
@@ -14,7 +14,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 It's very satisfying being a member of the leadership team inside
 Zalando Search. As a group, the other leads have been very welcoming
