--- a/pages/blog/2016/12/30/lermanns-law-2.mdx
+++ b/pages/blog/2016/12/30/lermanns-law-2.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "Lehman's Second Law",
@@ -12,7 +12,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 *This is the third post in my weekly series on [Lehman's Laws of
  Software
