--- a/pages/blog/2017/02/11/nextcloud-docker.mdx
+++ b/pages/blog/2017/02/11/nextcloud-docker.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "Playing With The Nextcloud Docker Experience",
@@ -12,7 +12,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 Ever since its roots as ownCloud within the [KDE](http://www.kde.org)
 project, I have always been fan of Nextcloud. On a personal level, I
