--- a/pages/blog/2017/04/15/habitat-cratedb.mdx
+++ b/pages/blog/2017/04/15/habitat-cratedb.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 import 'prismjs/themes/prism-okaidia.css'
 
@@ -14,7 +14,7 @@ export const meta = {
     }
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 A few weeks back [I wrote
 about](http://baggerspion.net/2017/04/habitat-intro/) playing with
