--- a/pages/blog/2017/05/23/chefconf-day-0.mdx
+++ b/pages/blog/2017/05/23/chefconf-day-0.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: 'ChefConf 2017 - Day 0',
@@ -14,7 +14,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 In downtown ATX there is a statue of [Willie
 Nelson](https://en.wikipedia.org/wiki/Willie_Nelson). If you stare at
