--- a/pages/blog/2017/05/28/habitat-R.mdx
+++ b/pages/blog/2017/05/28/habitat-R.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 import 'prismjs/themes/prism-okaidia.css'
 
@@ -16,7 +16,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 While at [ChefConf](https://chefconf.chef.io) I had another of my
 now-infamous "how hard can it be?" moments. This time I was talking
