--- a/pages/blog/2017/06/23/habitat-R-redux.mdx
+++ b/pages/blog/2017/06/23/habitat-R-redux.mdx
@@ -1,4 +1,4 @@
-import Page from 'components/Page'
+import BlogPost from 'components/BlogPost'
 
 import 'prismjs/themes/prism-okaidia.css'
 
@@ -16,7 +16,7 @@ export const meta = {
     readTime: 2
 }
 
-export default ({ children }) => <Page meta={meta}>{children}</Page>
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 At the end of last month [I blogged
 about](http://baggerspion.net/2017/05/habitat-R/) my work in producing
