Restructure the URLs. Add descriptions to blog posts.

--- a/pages/blog/2017/01/quote-of-the-year.mdx
+++ b/pages/blog/2017/01/quote-of-the-year.mdx
@@ -2,7 +2,7 @@ import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "Quote Of The Year",
-    description: 'Getting started with the Next framework',
+    description: 'Learning German. One tense at a time.',
     date: '2017-01-09',
     image: 'lesson.jpg',
     author: {
