--- a/pages/blog/2017/02/fosdem-2017.mdx
+++ b/pages/blog/2017/02/fosdem-2017.mdx
@@ -2,7 +2,7 @@ import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "6 Simple Rules (The FOSDEM Survival Guide)",
-    description: 'Getting started with the Next framework',
+    description: 'Ahhh FOSDEM, the conference I never miss. I only missed the first 2 or 3 and I have been every year since. Here, I present my survival guide for the uninitiated.',
     date: '2017-02-04',
     image: 'fosdem.jpg',
     author: {
@@ -41,7 +41,7 @@ all. Thankfully, most of the content is recorded and/or live streamed.
 Talks at FOSDEM get [recorded.](http://video.fosdem.org) **Don't go
 to talks.**
 
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">My <a href="https://twitter.com/hashtag/FOSDEM?src=hash">#FOSDEM</a> experience described in one photo <a href="https://t.co/QUdOB6T2Wr">pic.twitter.com/QUdOB6T2Wr</a></p>&mdash; Sujee Vijayakumaran (@svijee) <a href="https://twitter.com/svijee/status/828204867642597376">February 5, 2017</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote className="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">My <a href="https://twitter.com/hashtag/FOSDEM?src=hash">#FOSDEM</a> experience described in one photo <a href="https://t.co/QUdOB6T2Wr">pic.twitter.com/QUdOB6T2Wr</a></p>&mdash; Sujee Vijayakumaran (@svijee) <a href="https://twitter.com/svijee/status/828204867642597376">February 5, 2017</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 ## Law 2: The Law of Engagement
 
@@ -54,7 +54,7 @@ work the hallway track. For me, FOSDEM is all about getting the most
 out of the all-too-brief chats that you get with your fellow
 attendees.
 
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Bye bye <a href="https://twitter.com/hashtag/Fosdem?src=hash">#Fosdem</a> - great to meet all friends and learn new things! See you next year!</p>&mdash; Olle E. Johansson (@oej) <a href="https://twitter.com/oej/status/828284536475762688">February 5, 2017</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote className="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Bye bye <a href="https://twitter.com/hashtag/Fosdem?src=hash">#Fosdem</a> - great to meet all friends and learn new things! See you next year!</p>&mdash; Olle E. Johansson (@oej) <a href="https://twitter.com/oej/status/828284536475762688">February 5, 2017</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 **At least once during the event, talk to someone you don't know about
   something you know nothing about.**
@@ -67,7 +67,7 @@ likewise. However, the FOSDEM crowd basically performs a denial of
 service attack on an entire alleyway and it can take you a very long
 time to find the beer, or people, that you are looking for.
 
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Left my mark on some beer mats in <a href="https://twitter.com/hashtag/Brussels?src=hash">#Brussels</a> <a href="https://twitter.com/MoederLambic">@MoederLambic</a> <a href="https://twitter.com/hashtag/FOSDEM?src=hash">#FOSDEM</a> <a href="https://t.co/lGxKtft4tU">pic.twitter.com/lGxKtft4tU</a></p>&mdash; Daniel Inniss (@danielinniss) <a href="https://twitter.com/danielinniss/status/694065461084975104">February 1, 2016</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote className="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Left my mark on some beer mats in <a href="https://twitter.com/hashtag/Brussels?src=hash">#Brussels</a> <a href="https://twitter.com/MoederLambic">@MoederLambic</a> <a href="https://twitter.com/hashtag/FOSDEM?src=hash">#FOSDEM</a> <a href="https://t.co/lGxKtft4tU">pic.twitter.com/lGxKtft4tU</a></p>&mdash; Daniel Inniss (@danielinniss) <a href="https://twitter.com/danielinniss/status/694065461084975104">February 1, 2016</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 Brussels is full of great bars where you can meet your
 friends. **Don't go to the beer event.**
@@ -92,7 +92,7 @@ If you chase people all the time, you run the risk of never catching
 up with them. Find yourself a prominent place to park yourself and
 park yourself. **Don't chase.**
 
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Today started with, &quot;Paul, I came to find you at your table...&quot; <a href="https://twitter.com/hashtag/fosdem?src=hash">#fosdem</a> wisdom no. 2: have a table, hold court. <a href="https://t.co/qufGOQ8Dj4">https://t.co/qufGOQ8Dj4</a></p>&mdash; Paul Adams (@therealpadams) <a href="https://twitter.com/therealpadams/status/827824668325339136">February 4, 2017</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote className="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Today started with, &quot;Paul, I came to find you at your table...&quot; <a href="https://twitter.com/hashtag/fosdem?src=hash">#fosdem</a> wisdom no. 2: have a table, hold court. <a href="https://t.co/qufGOQ8Dj4">https://t.co/qufGOQ8Dj4</a></p>&mdash; Paul Adams (@therealpadams) <a href="https://twitter.com/therealpadams/status/827824668325339136">February 4, 2017</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 ## Law 5: The Law of Limited Public Transport
 
@@ -125,4 +125,4 @@ two. Almost certainly brought on by an intense increase in hug density
 Get a decent dinner in Brussels. **Don't go to the food trucks between
 12:00 and 13:30.**
 
-<blockquote class="twitter-tweet" data-lang="en"><p lang="de" dir="ltr">Fries, waffle, fries, sandwich, waffle, fries, wa.... <a href="https://twitter.com/hashtag/FOSDEM?src=hash">#FOSDEM</a> :D</p>&mdash; Andrea Bernabei (@faenil) <a href="https://twitter.com/faenil/status/561988829905948673">February 1, 2015</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote className="twitter-tweet" data-lang="en"><p lang="de" dir="ltr">Fries, waffle, fries, sandwich, waffle, fries, wa.... <a href="https://twitter.com/hashtag/FOSDEM?src=hash">#FOSDEM</a> :D</p>&mdash; Andrea Bernabei (@faenil) <a href="https://twitter.com/faenil/status/561988829905948673">February 1, 2015</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
