--- a/pages/blog/2017/02/nextcloud-docker.mdx
+++ b/pages/blog/2017/02/nextcloud-docker.mdx
@@ -2,7 +2,7 @@ import BlogPost from 'components/BlogPost'
 
 export const meta = {
     title: "Playing With The Nextcloud Docker Experience",
-    description: 'Getting started with the Next framework',
+    description: "Nextcloud's official Docker image is pretty large. With a little effort, can I reduce that by about 50%? Let's see!",
     date: '2017-02-11',
     image: 'clouds.jpg',
     author: {
