--- a/pages/blog/2017/04/habitat-cratedb.mdx
+++ b/pages/blog/2017/04/habitat-cratedb.mdx
@@ -4,7 +4,7 @@ import 'prismjs/themes/prism-okaidia.css'
 
 export const meta = {
     title: "A New Habitat For Crate",
-    description: 'Getting started with the Next framework',
+    description: 'Habitat already has a package for Elasticsearch. Should not be too hard to extend that to CrateDB, right? Right??',
     date: '2017-04-15',
     image: 'field.jpg',
     author: {
