--- a/pages/blog/2017/04/habitat-intro.mdx
+++ b/pages/blog/2017/04/habitat-intro.mdx
@@ -3,7 +3,7 @@ import Youtube from 'components/Youtube'
 
 export const meta = {
     title: "Playing In My Local Habitat",
-    description: 'Getting started with the Next framework',
+    description: 'Getting started with Chef Habitat.',
     date: '2017-04-01',
     image: 'habitat.jpg',
     author: {
