--- a/pages/blog/2017/05/chefconf-day-0.mdx
+++ b/pages/blog/2017/05/chefconf-day-0.mdx
@@ -3,7 +3,7 @@ import BlogPost from 'components/BlogPost'
 export const meta = {
     title: 'ChefConf 2017 - Day 0',
     category: 'open source',
-    description: 'Getting started with the Next framework',
+    description: 'Notes from the first day of ChefConf in Austin.',
     date: '2017-05-23',
     image: 'bigwillie.jpg',
     author: {
@@ -59,7 +59,7 @@ Lots of fun to meet and talk.
 
 What can I say? I hung out with some of my new friends from Habitat and we ate/drank some (by my standards) quite ridiculous food. Amazing:
 
-<center><blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/habitatsh?src=hash">#habitatsh</a> community meal with <a href="https://twitter.com/therealpadams">@therealpadams</a>. Eat your canadian heart out <a href="https://twitter.com/fnichol">@fnichol</a>! <a href="https://t.co/0XxdXOrbcH">pic.twitter.com/0XxdXOrbcH</a></p>&mdash; Habitat.sh (@habitatsh) <a href="https://twitter.com/habitatsh/status/866819032149831681">May 23, 2017</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></center>
+<center><blockquote className="twitter-tweet" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/habitatsh?src=hash">#habitatsh</a> community meal with <a href="https://twitter.com/therealpadams">@therealpadams</a>. Eat your canadian heart out <a href="https://twitter.com/fnichol">@fnichol</a>! <a href="https://t.co/0XxdXOrbcH">pic.twitter.com/0XxdXOrbcH</a></p>&mdash; Habitat.sh (@habitatsh) <a href="https://twitter.com/habitatsh/status/866819032149831681">May 23, 2017</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></center>
 
 ## So There Is An Actual Conference Coming Up, Right?
 
