--- a/pages/blog/2017/05/chefconf-day-minus-1.mdx
+++ b/pages/blog/2017/05/chefconf-day-minus-1.mdx
@@ -3,7 +3,7 @@ import BlogPost from 'components/BlogPost'
 export const meta = {
     title: 'ChefConf 2017 - Day -1',
     category: 'open source',
-    description: 'Getting started with the Next framework',
+    description: 'Notes from the day before ChefConf in Austin.',
     date: '2017-05-22',
     image: 'chefconfheader.jpg',
     author: {
@@ -33,7 +33,7 @@ wanted to prepare a talk on my work on packaging
 Then [Habitat 0.24 was released](https://forums.habitat.sh/t/habitat-0-24-0-released/334)...
 
 <center>
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Updating <a href="https://twitter.com/habitatsh">@habitatsh</a> plans at 19:00 on the night before travelling to <a href="https://twitter.com/chef">@chef</a> <a href="https://twitter.com/hashtag/chefconf?src=hash">#chefconf</a> because you find they are not Habitat 0.24 compatible. <a href="https://t.co/kvzyXxYsD0">pic.twitter.com/kvzyXxYsD0</a></p>&mdash; Paul Adams (@therealpadams) <a href="https://twitter.com/therealpadams/status/865979012300111872">May 20, 2017</a></blockquote>
+<blockquote className="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Updating <a href="https://twitter.com/habitatsh">@habitatsh</a> plans at 19:00 on the night before travelling to <a href="https://twitter.com/chef">@chef</a> <a href="https://twitter.com/hashtag/chefconf?src=hash">#chefconf</a> because you find they are not Habitat 0.24 compatible. <a href="https://t.co/kvzyXxYsD0">pic.twitter.com/kvzyXxYsD0</a></p>&mdash; Paul Adams (@therealpadams) <a href="https://twitter.com/therealpadams/status/865979012300111872">May 20, 2017</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></center>
 
 In Habitat 0.24 `hab service` became `hab svc` and this borked the
