--- a/pages/blog/2017/05/drupal-twice.mdx
+++ b/pages/blog/2017/05/drupal-twice.mdx
@@ -3,7 +3,7 @@ import BlogPost from 'components/BlogPost'
 export const meta = {
     title: 'Packaging PHP in Habitat. A Tale Of Two Drupals.',
     category: 'open source',
-    description: 'Getting started with the Next framework',
+    description: 'Packaging Drupal for Habitat. How hard can it be?',
     date: '2017-05-16',
     image: 'cms.jpg',
     author: {
