--- a/pages/blog/2017/05/habitat-R.mdx
+++ b/pages/blog/2017/05/habitat-R.mdx
@@ -5,7 +5,7 @@ import 'prismjs/themes/prism-okaidia.css'
 export const meta = {
     title: 'Habitat, R and the Art of the Pull Request',
     category: 'open source',
-    description: 'Getting started with the Next framework',
+    description: 'A brief introduction to packaging R for Chef Habitat.',
     date: '2017-05-28',
     image: 'stats.jpg',
     author: {
