--- a/pages/blog/2017/05/habitat-sup-22.mdx
+++ b/pages/blog/2017/05/habitat-sup-22.mdx
@@ -5,7 +5,7 @@ import 'prismjs/themes/prism-okaidia.css'
 export const meta = {
     title: "Idiot's Guide To The Supervisor In Habitat 0.22",
     category: 'open source',
-    description: 'Getting started with the Next framework',
+    description: 'Habitat 0.22 is out and with it comes changes to the default behaviour of the Supervisor. Pay attention, folks!',
     date: '2017-05-11',
     image: 'super.jpg',
     author: {
