--- a/pages/blog/2017/06/habitat-community.mdx
+++ b/pages/blog/2017/06/habitat-community.mdx
@@ -3,7 +3,7 @@ import BlogPost from 'components/BlogPost'
 export const meta = {
     title: 'Visualising The Habitat Community',
     category: 'open source',
-    description: 'Getting started with the Next framework',
+    description: 'For years I visualised various aspects of the KDE community. I decided it was about time to do the same for Habitat, since that is where my effort lies these days.',
     date: '2017-06-04',
     image: 'blobs.png',
     author: {
@@ -17,7 +17,7 @@ export const meta = {
 export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>
 
 It's been a while since I did a Git [repo
-visualisation](/2016/12/docker-2016/), which means I am definitely
+visualisation](/blog/2016/12/docker-2016/), which means I am definitely
 overdue to talk about the [Habitat](https://habitat.sh) community. In
 this blog post I will show-off the main repos for Habitat (at least
 the main ones _I_ have been hanging out in) and describe what I have
