--- a/pages/blog/2017/07/autotools-and-habitat.mdx
+++ b/pages/blog/2017/07/autotools-and-habitat.mdx
@@ -5,7 +5,7 @@ import 'prismjs/themes/prism-okaidia.css'
 export const meta = {
     title: 'Autotools in the Habitat Context',
     category: 'open source',
-    description: 'Getting started with the Next framework',
+    description: 'Applying an old buildsystem in a modern Habitat.',
     date: '2017-07-10',
     image: 'tools.jpg',
     author: {
