--- a/pages/blog/2017/07/retired-from-kde.mdx
+++ b/pages/blog/2017/07/retired-from-kde.mdx
@@ -3,7 +3,7 @@ import BlogPost from 'components/BlogPost'
 export const meta = {
     title: 'Retired From KDE',
     category: 'open source',
-    description: 'Getting started with the Next framework',
+    description: 'A brief history of my involvement with KDE and why I am now taking a step back.',
     date: '2017-07-21',
     image: 'kde-committers.png',
     author: {
