--- a/pages/blog/2018/01/finding-strength.mdx
+++ b/pages/blog/2018/01/finding-strength.mdx
@@ -3,7 +3,7 @@ import BlogPost from 'components/BlogPost'
 export const meta = {
     title: 'Evaluating My Strengths',
     category: 'culture',
-    description: 'Getting started with the Next framework',
+    description: 'As part of a leadership team exercise, I followed the Clifton StrengsFinder assessment to find out more about where my skills lie as a lead.',
     date: '2018-01-29',
     image: 'strength.jpg',
     author: {
