--- a/pages/blog/2017/04/habitat-source-verification.mdx
+++ b/pages/blog/2017/04/habitat-source-verification.mdx
@@ -4,7 +4,7 @@ import 'prismjs/themes/prism-okaidia.css'
 
 export const meta = {
     title: "Source Verification Using GnuPG In Habitat",
-    description: 'Getting started with the Next framework',
+    description: 'A brief note on how to verify that you are building/packaging what you think you are for Habitat.',
     date: '2017-04-28',
     image: 'mask.jpg',
     author: {
