--- a/pages/blog/2017/06/habitat-R-redux.mdx
+++ b/pages/blog/2017/06/habitat-R-redux.mdx
@@ -5,7 +5,7 @@ import 'prismjs/themes/prism-okaidia.css'
 export const meta = {
     title: 'The core/R Habitat Package',
     category: 'open source',
-    description: 'Getting started with the Next framework',
+    description: 'A brief set of notes on how I prepared the core/R package for Habitat.',
     date: '2017-06-23',
     image: 'smart-cat.jpg',
     author: {
