--- a/pages/blog/2018/01/habitat-php.mdx
+++ b/pages/blog/2018/01/habitat-php.mdx
@@ -5,7 +5,7 @@ import 'prismjs/themes/prism-okaidia.css'
 export const meta = {
     title: 'Habitat Core/PHP, The Story Of The PR',
     category: 'open source',
-    description: 'Getting started with the Next framework',
+    description: 'It turns out that packaging PHP applications for Habitat really is a little fiddly. Here is my work-in-progress for Drupal.',
     date: '2018-01-22',
     image: 'core.jpg',
     author: {
