Switch to Cloudinary for images

--- a/pages/blog/2016/12/crate-ga.mdx
+++ b/pages/blog/2016/12/crate-ga.mdx
@@ -40,7 +40,7 @@ these pictures.
 
 ## Crate GA Blobs
 So let's take a look at the Blue Blobs for the Crate GA release...
-![Crate v1.0.1 Blobs](/assets/images/crate-ga-blobs.png)
+![Crate v1.0.1 Blobs](crate-ga-blobs.png)
 
 I think this is pretty typical for a young-ish community:
 
