--- a/pages/blog/2016/12/docker-2016.mdx
+++ b/pages/blog/2016/12/docker-2016.mdx
@@ -37,7 +37,7 @@ By now Docker has grown to become a crucial set of technologies within
 the containerisation ecosystem. So we might expect a strong community
 to go along with that. Here are the blue blobs for 2016:
 
-![Docker Blobs 2016](/assets/images/docker-2016.png)
+![Docker Blobs 2016](docker-2016.png)
 
 ## Some Basic Observations
 
