--- a/pages/blog/2017/05/drupal-twice.mdx
+++ b/pages/blog/2017/05/drupal-twice.mdx
@@ -71,7 +71,7 @@ source tarball, unpack it in a specific location and configure NGINX
 to use that location as a site root. When it is run, the user is
 presented with a shiny new Drupal install page:
 
-![Drupal Install Page](/assets/images/drupal-start.png)
+![Drupal Install Page](drupal-start.png)
 
 So, there you have it, a successful Drupal package for Habitat!
 
@@ -121,7 +121,7 @@ Habitat website. What's important here is that, because I have bound
 my Drupal service to a Mysql service, I can now configure my service
 to use that database automatically. What does the user see now?
 
-![Drupal Login Page](/assets/images/drupal-better.png)
+![Drupal Login Page](drupal-better.png)
 
 This is much better. I think.
 
