--- a/pages/blog/2017/06/habitat-community.mdx
+++ b/pages/blog/2017/06/habitat-community.mdx
@@ -44,7 +44,7 @@ for _your_ application).
 Without further ado, here's the blue blobs for Habitat (click to
 enlarge):
 
-![All-Time Habitat Contributions](/assets/images/habitat.png)
+![All-Time Habitat Contributions](habitat.png)
 
 I've been staring at these blue blob visualisations for years now. As
 a result I think the things that I find interesting in them has become
@@ -80,7 +80,7 @@ dependencies for the applications that Habitat users are
 packaging. You know, like [gcc](http://gcc.gnu.org). I _suspect_ we
 are more likely-to find non-Chef-employee contributions in this repo.
 
-![All-Time Habitat Core Plan Contributions](/assets/images/core.png)
+![All-Time Habitat Core Plan Contributions](core.png)
 
 At least my own contributions are a little more apparent!
 
