--- a/pages/blog/2017/08/satisficery-engineering.mdx
+++ b/pages/blog/2017/08/satisficery-engineering.mdx
@@ -32,7 +32,7 @@ sorts of shapes and sizes. The amount of effort that goes into helping
 those goals needs to be balanced with results being achieved. This
 balance between effort and results is what I call "Push".
 
-![Push Axes](/assets/images/effort-vs-results.png)
+![Push Axes](effort-vs-results.png)
 
 Push is a good thing. By keeping Push in mind, engineering leaders are
 helping to ensure that their engineers are satisfied, productive and
@@ -47,7 +47,7 @@ desirable.
 
 Lots of effort, lots of results! Great, right?
 
-![Push Axes (Enhanced)](/assets/images/effort-vs-results-corners.png)
+![Push Axes (Enhanced)](effort-vs-results-corners.png)
 
 Let's look at the corners one-by-one:
 
@@ -84,7 +84,7 @@ dimensions themselves: results (achievement) and effort. For each of
 these dimenions there are some clear downsides to being too far
 up/down the scale:
 
-![Push Axis (Super-enhanced)](/assets/images/effort-vs-results-sides.png)
+![Push Axis (Super-enhanced)](effort-vs-results-sides.png)
 
 - Too Much Effort
 
@@ -128,7 +128,7 @@ At the heart of "Push" there is this desirable space I call
 achievement, but without over-excursion. Sometimes we might want to
 deliberately lower the focus on effort!
 
-![Push Axis (Final)](/assets/images/satisfice.png)
+![Push Axis (Final)](satisfice.png)
 
 The trick with Satisfice is understanding how to walk about this sweet
 spot.
