--- a/pages/blog/2016/12/lehmanns-law-1.mdx
+++ b/pages/blog/2016/12/lehmanns-law-1.mdx
@@ -2,7 +2,7 @@ import BlogPost from 'components/layouts/blog/Blog'
 
 export const meta = {
     title: "Lehman's First Law",
-    description: 'Getting started with the Next framework',
+    description: 'Continuing my thoughts on Lehman\'s laws',
     date: '2016-12-23',
     image: 'creep.webp',
     author: {
@@ -19,7 +19,7 @@ Software Evolution and how they relate to agility. I'll probably only
 post one per week over the coming months. If you have not done so
 already, you should go and take a look at my introductory post [over here.](/2016/12/evolution/)
 
-## Law 1: Continuiung Change
+## Law 1: Continuing Change
 
 > An E-type system must be continually adapted or it becomes
 > progressively less satisfactory
