Fix broken images

--- a/pages/blog/2017/02/nextcloud-docker.mdx
+++ b/pages/blog/2017/02/nextcloud-docker.mdx
@@ -88,7 +88,7 @@ My original mission was to see if I could reduce the enormous 600mb+
 image size. Given my lack of experience, I would have been happy to
 shave off a few mb. I never expected this...
 
-![Docker Image Size Comparison](/assets/images/image-size.png)
+![Docker Image Size Comparison](image-size.png)
 
 My image (at the top) represents a ~45% disk usage reduction over the
 official image!
@@ -113,7 +113,7 @@ had to borrow the php5 package. I assume this does not entirely work.
 
 ## Have A Play
 
-![Docker nextCloud Result](/assets/images/nextcloud-result.png)
+![Docker nextCloud Result](nextcloud-result.png)
 
 So this work is not entirely finished:
 
